# typinox

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci-on-commit.yml  publish-pypi-on-release.yml  publish-test-pypi-on-tag.yml  release-on-tag.yml
docs/: Makefile  release_notes.md
docs/src/: conf.py  development.rst  index.rst  usage.rst
docs/src/api/: index.rst  typinox.error.rst  typinox.tree.rst  vmapped.rst
docs/src/usage/: custom_validator.rst  index.rst
test/: conftest.py  test_tree_stack.py  test_validator.py  test_vmapped.py
test/module/: test_module_abstractvar.py  test_module_basic.py  test_module_constraint_scope.py  test_module_efficiency.py  test_module_ml.py  test_module_policy.py  test_module_typevartuple.py  test_module_validate.py  test_module_vmapped.py  test_module_with_init.py
typinox/: __init__.py  _helper.py  _module.py  _shaped.py  _vmapped.py  debug.py  error.py  module.py  shaped.py  tree.py  validator.py  vmapped.py
