[project]
name = "typinox"
version = "0.1.0"
description = ""
authors = [
    {name = "Etaoin Wu", email = "me@etaoinwu.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype (>=0.20.0,<0.21.0)",
    "equinox (>=0.11.12,<0.12.0)",
    "jaxtyping (>=0.2.38,<0.3.0)",
    "jax (>=0.5.1,<0.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py313"
# extend-include = ["*.ipynb"]

[tool.ruff.lint]
typing-modules = ["beartype.typing"]
select = [
  "E4", "E7", "E9",
  "F",
  "UP", # pyupgrade
  "I",   # isort
]
ignore = ["F722", "E741"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "E731"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "--cov=typinox --cov-report=term-missing:skip-covered"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
sphinx = "^8.2.3"
sphinx-autobuild = "^2024.10.3"
chex = "^0.1.89"
ruff = "^0.9.9"

