[project]
name = "typinox"
version = "0.5.1"
description = "Enhanced runtime type-checked JAX modules"
authors = [{ name = "Etaoin Wu", email = "me@etaoinwu.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "jax",
    "neural-networks",
    "deep-learning",
    "equinox",
    "typing",
    "type-checking",
    "annotations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "equinox>=0.13.8,<0.14.0",
    "jaxtyping>=0.3.10,<0.4.0",
    "jax>=0.10.1,<0.11.0",
    "beartype>=0.22.9",
]

[project.urls]
repository = "https://github.com/EtaoinWu/typinox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sphinx>=8.2.3,<9",
    "sphinx-autobuild>=2024.10.3,<2025",
    "chex>=0.1.91",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
    "sphinx-book-theme>=1.2.0,<2",
    "basedpyright>=1.39.6",
    "pyrefly>=1.0.0",
]

[tool.ruff]
line-length = 78
target-version = "py314"

[tool.ruff.lint]
typing-modules = ["beartype.typing"]
select = [
  "E",
  "F",
  "B", # bugbear
  "UP", # pyupgrade
  "I",  # isort
]
ignore = [
  "E501", # https://docs.astral.sh/ruff/rules/line-too-long/; handled by formatter for code
  "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
  "B010", # https://docs.astral.sh/ruff/rules/set-attr-with-constant
  "B905", # https://docs.astral.sh/ruff/rules/zip-without-explicit-strict/
  # We use both ruff formatter and linter so some rules should always be disabled.
  # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
  "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
  "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
  "E117", # https://docs.astral.sh/ruff/rules/over-indented/
  "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
  "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
  "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
  "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
  "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
  "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
  "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
  "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
  "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
  # The following are for jaxtyping
  "F722", # https://docs.astral.sh/ruff/rules/forward-annotation-syntax-error/
  "E741", # https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "E731"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "--cov=typinox --cov-report=term-missing:skip-covered --doctest-modules"

[tool.basedpyright]
pythonVersion = "3.14"
exclude = ["venv", "docs", ".venv"]
# respect "# type: ignore" comments
enableTypeIgnoreComments = true
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportPrivateLocalImportUsage = false
# reportMissingImports = false
# reportUnnecessaryIsInstance = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false


[tool.mypy]
python_version = "3.14"
exclude = ["venv", "docs", ".venv", "test"]

[tool.pyrefly]
project-excludes = [
    "**/venv*",
    "**/docs*",
    "**/.venv*",
]
python-version = "3.14.0"
preset = "strict"
